--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "assert-is-callable-x",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "If IsCallable(callbackfn) is false, throw a TypeError exception.",
     "homepage": "https://github.com/Xotic750/assert-is-callable-x",
     "author": {
@@ -43,7 +43,7 @@
     "scripts": {
       "test": "jasmine-node --matchall tests/spec/",
       "style": "jscs index.js",
-      "docs": "jsdoc2md --name-format code --module-index-format dl --param-list-format --example-lang js table index.js > README.md",
+      "docs": "jsdoc2md --name-format code --example-lang js table index.js > README.md",
       "build": "browserify -e index.js -o lib/assert-is-callable-x.js -u 'crypto' -s returnExports",
       "build-uglify": "uglifyjs lib/assert-is-callable-x.js -o lib/assert-is-callable-x.min.js --compress unused=false,dead_code=false --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/assert-is-callable-x.map"
     }
