--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "assert-is-callable-x",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "If IsCallable(callbackfn) is false, throw a TypeError exception.",
     "homepage": "https://github.com/Xotic750/assert-is-callable-x",
     "author": {
@@ -29,7 +29,7 @@
         "url": "https://github.com/Xotic750/assert-is-callable-x/issues"
     },
     "dependencies": {
-      "is-callable": "^1.1.0",
+      "es-abstract": "^1.4.3",
       "is-primitive": "^2.0.0"
     },
     "devDependencies": {
