--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "assert-is-callable-x",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "If IsCallable(callbackfn) is false, throw a TypeError exception.",
     "homepage": "https://github.com/Xotic750/assert-is-callable-x",
     "author": {
@@ -30,6 +30,7 @@
     },
     "dependencies": {
       "es-abstract": "^1.4.3",
+      "safe-to-string-x": "^1.0.0",
       "is-primitive": "^2.0.0"
     },
     "devDependencies": {
