--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assert-is-callable-x",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "If IsCallable(callbackfn) is false, throw a TypeError exception.",
   "homepage": "https://github.com/Xotic750/assert-is-callable-x",
   "author": {
@@ -30,16 +30,18 @@
   },
   "dependencies": {
     "es-abstract": "^1.4.3",
-    "safe-to-string-x": "^1.1.1",
+    "safe-to-string-x": "^1.1.2",
     "is-primitive": "^2.0.0"
   },
   "devDependencies": {
-    "es5-shim": "^4.3.1",
-    "jscs": "^2.5.1",
+    "es5-shim": "^4.4.1",
+    "es6-shim": "^0.34.0",
+    "json3": "^3.3.2",
+    "jscs": "^2.7.0",
     "uglify-js": "^2.6.1",
     "browserify": "12.0.1",
     "jasmine-node": "^1.14.5",
-    "jsdoc-to-markdown": "^1.2.1"
+    "jsdoc-to-markdown": "^1.3.1"
   },
   "scripts": {
     "test": "jasmine-node --matchall tests/spec/",
