--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assert-is-callable-x",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "If IsCallable(callbackfn) is false, throw a TypeError exception.",
   "homepage": "https://github.com/Xotic750/assert-is-callable-x",
   "author": {
@@ -30,14 +30,14 @@
   },
   "dependencies": {
     "es-abstract": "^1.5.0",
-    "safe-to-string-x": "^1.1.3",
+    "safe-to-string-x": "^1.1.4",
     "is-primitive": "^2.0.0"
   },
   "devDependencies": {
     "es5-shim": "^4.4.1",
-    "es6-shim": "^0.34.0",
+    "es6-shim": "^0.34.1",
     "json3": "^3.3.2",
-    "jscs": "^2.7.0",
+    "jscs": "^2.8.0",
     "uglify-js": "^2.6.1",
     "browserify": "^12.0.1",
     "jasmine-node": "^1.14.5",
@@ -48,6 +48,6 @@
     "style": "jscs index.js",
     "docs": "jsdoc2md --name-format --example-lang js index.js > README.md",
     "build": "browserify -e index.js -o lib/assert-is-callable-x.js -u 'crypto' -s returnExports",
-    "build-uglify": "uglifyjs lib/assert-is-callable-x.js -o lib/assert-is-callable-x.min.js --compress unused=false,dead_code=false --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/assert-is-callable-x.map"
+    "build-uglify": "uglifyjs lib/assert-is-callable-x.js -o lib/assert-is-callable-x.min.js --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/assert-is-callable-x.map"
   }
 }
