--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assert-is-callable-x",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "If IsCallable(callbackfn) is false, throw a TypeError exception.",
   "homepage": "https://github.com/Xotic750/assert-is-callable-x",
   "author": {
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "es-abstract": "^1.5.0",
-    "safe-to-string-x": "^1.1.4",
+    "safe-to-string-x": "^1.1.5",
     "is-primitive": "^2.0.0"
   },
   "devDependencies": {
@@ -39,15 +39,18 @@
     "json3": "^3.3.2",
     "jscs": "^2.8.0",
     "uglify-js": "^2.6.1",
-    "browserify": "^12.0.1",
+    "browserify": "^13.0.0",
+    "browserify-derequire": "^0.9.4",
     "jasmine-node": "^1.14.5",
-    "jsdoc-to-markdown": "^1.3.3"
+    "jsdoc-to-markdown": "^1.3.3",
+    "nsp": "^2.2.0"
   },
   "scripts": {
     "test": "jasmine-node --matchall tests/spec/",
+    "security": "nsp check",
     "style": "jscs index.js",
     "docs": "jsdoc2md --name-format --example-lang js index.js > README.md",
-    "build": "browserify -e index.js -o lib/assert-is-callable-x.js -u 'crypto' -s returnExports",
+    "build": "browserify -p browserify-derequire -e index.js -o lib/assert-is-callable-x.js -u 'crypto' -s returnExports",
     "build-uglify": "uglifyjs lib/assert-is-callable-x.js -o lib/assert-is-callable-x.min.js --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/assert-is-callable-x.map"
   }
 }
