--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "assert-is-callable-x",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "If IsCallable(callbackfn) is false, throw a TypeError exception.",
   "homepage": "https://github.com/Xotic750/assert-is-callable-x",
   "author": {
     "name": "Graham Fairweather",
     "email": "xotic750@gmail.com"
   },
-  "copyright": "Copyright (c) 2015",
+  "copyright": "Copyright (c) 2015-2016",
   "keywords": [
     "es6",
     "assertIsCallable",
@@ -29,8 +29,8 @@
     "url": "https://github.com/Xotic750/assert-is-callable-x/issues"
   },
   "dependencies": {
-    "es-abstract": "^1.5.0",
-    "safe-to-string-x": "^1.1.5",
+    "is-callable": "^1.1.2",
+    "safe-to-string-x": "^1.1.6",
     "is-primitive": "^2.0.0"
   },
   "devDependencies": {
