--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "assert-is-callable-x",
-  "version": "1.0.15",
+  "version": "1.1.0",
   "description": "If IsCallable(callbackfn) is false, throw a TypeError exception.",
   "homepage": "https://github.com/Xotic750/assert-is-callable-x",
   "author": {
     "name": "Graham Fairweather",
     "email": "xotic750@gmail.com"
   },
-  "copyright": "Copyright (c) 2015-2016",
+  "copyright": "Copyright (c) 2015-2017",
   "keywords": [
     "es6",
     "assertIsCallable",
@@ -29,26 +29,31 @@
     "url": "https://github.com/Xotic750/assert-is-callable-x/issues"
   },
   "dependencies": {
-    "is-callable": "^1.1.2",
-    "safe-to-string-x": "^1.1.11",
+    "is-callable": "^1.1.3",
+    "safe-to-string-x": "^1.2.0",
     "is-primitive": "^2.0.0"
   },
   "devDependencies": {
-    "es5-shim": "^4.5.4",
-    "es6-shim": "^0.34.4",
+    "@ljharb/eslint-config": "^11.0.0",
+    "es5-shim": "^4.5.9",
+    "es6-shim": "^0.35.3",
+    "es7-shim": "^6.0.0",
+    "eslint": "^3.17.1",
+    "eslint-plugin-import": "^2.2.0",
     "json3": "^3.3.2",
-    "jscs": "^2.9.0",
-    "uglify-js": "^2.6.1",
-    "browserify": "^13.0.0",
+    "jscs": "^3.0.7",
+    "uglify-js": "^2.8.11",
+    "browserify": "^14.1.0",
     "browserify-derequire": "^0.9.4",
     "jasmine-node": "^1.14.5",
-    "jsdoc-to-markdown": "^1.3.3",
-    "nsp": "^2.2.0"
+    "jsdoc-to-markdown": "^3.0.0",
+    "nsp": "^2.6.3"
   },
   "scripts": {
     "test": "jasmine-node --matchall tests/spec/",
     "security": "nsp check",
     "style": "jscs index.js",
+    "eslint": "eslint *.js tests/spec/*.js",
     "docs": "jsdoc2md --name-format --example-lang js index.js > README.md",
     "build": "browserify -p browserify-derequire -e index.js -o lib/assert-is-callable-x.js -u 'crypto' -s returnExports",
     "build-uglify": "uglifyjs lib/assert-is-callable-x.js -o lib/assert-is-callable-x.min.js --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map lib/assert-is-callable-x.map"
