--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "assert-is-callable-x",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "If IsCallable(callbackfn) is false, throw a TypeError exception.",
   "homepage": "https://github.com/Xotic750/assert-is-callable-x",
   "author": {
@@ -9,7 +9,6 @@
   },
   "copyright": "Copyright (c) 2015-2017",
   "keywords": [
-    "es6",
     "assertIsCallable",
     "module",
     "javascript",
@@ -30,8 +29,8 @@
   },
   "dependencies": {
     "is-callable": "^1.1.3",
-    "safe-to-string-x": "^2.0.1",
-    "is-primitive": "^2.0.0"
+    "is-primitive": "^2.0.0",
+    "to-string-symbols-supported-x": "^1.0.0"
   },
   "devDependencies": {
     "@xotic750/eslint-config-standard-x": "^2.2.1",
